Fixing product on tablet landscape

--- a/assets/scss/parts/product/product.scss
+++ b/assets/scss/parts/product/product.scss
@@ -1,4 +1,6 @@
 @mixin product {
+	@include product-grid;
+	
 	.woocommerce-loop-product__link {
 		@include link($type: not-underlined, $hover: not-underlined);
 	}
